src/objects/ACCL__Inventory__c.object
<CustomObject>
    <description>Holds the details of the inventory object.</description>
    <fields>
        <fullName>ACCL__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inventory</relationshipLabel>
        <relationshipName>Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Balance__c</fullName>
        <label>Balance</label>
        <summarizedField>ACCL__Inventory_Transaction__c.ACCL__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>ACCL__Inventory_Transaction__c.ACCL__Balance__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ACCL__Inventory_Transaction__c.ACCL__Inventory__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ACCL__Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>NOK</fullName>
                </value>
                <value>
                    <fullName>RUB</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_1__c</fullName>
        <label>Description Language 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_2__c</fullName>
        <label>Description Language 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_3__c</fullName>
        <label>Description Language 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description__c</fullName>
        <formula>CASE($User.ACCL__Language_Postfix__c,
&quot;Language1&quot;, ACCL__Description_Language_1__c,
&quot;Language2&quot;, BLANKVALUE(ACCL__Description_Language_2__c,ACCL__Description_Language_1__c),
&quot;Language3&quot;, BLANKVALUE(ACCL__Description_Language_3__c,ACCL__Description_Language_1__c),
&quot;Language4&quot;, BLANKVALUE(ACCL__Description_Language_4__c,ACCL__Description_Language_1__c),
ACCL__Description_Language_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Initial_Inventory__c</fullName>
        <description>Attribute that controls whether the system creates an initial transaction automatically for this inventory.</description>
        <label>Initial Inventory</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Invalid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether the Inventory is valid or not</description>
        <label>Invalid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Inventory_Control_Measure__c</fullName>
        <formula>TEXT(ACCL__Inventory_Template__r.ACCL__Inventory_Control_Measure__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inventory Control Measure</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Inventory_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Template</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ACCL__Inventory_Control_Template__c.ACCL__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ACCL__Inventory_Control_Template__c</referenceTo>
        <relationshipLabel>Inventory Inventory</relationshipLabel>
        <relationshipName>Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Phase__c</fullName>
        <label>Phase</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>ACCL__Product__c</referenceTo>
        <relationshipLabel>Inventory</relationshipLabel>
        <relationshipName>Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Quota_Type__c</fullName>
        <formula>TEXT(ACCL__Inventory_Template__r.ACCL__Quota_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quota Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Sales_Org__c</fullName>
        <label>Sales Org</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ACCL__Sales_Org</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Tour__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tour</label>
        <referenceTo>ACCL__Tour__c</referenceTo>
        <relationshipLabel>Inventory</relationshipLabel>
        <relationshipName>Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Upload_Id__c</fullName>
        <externalId>true</externalId>
        <label>Upload Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Valid_From__c</fullName>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Valid_Thru__c</fullName>
        <label>Valid Thru</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle</label>
        <referenceTo>ACCL__Vehicle__c</referenceTo>
        <relationshipLabel>Inventory</relationshipLabel>
        <relationshipName>Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Inventory</label>
    <listViews>
        <fullName>ACCL__All</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Phase__c</columns>
        <columns>ACCL__Inventory_Template__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ACCL__Quota_Type__c</columns>
        <columns>ACCL__User__c</columns>
        <columns>ACCL__Product__c</columns>
        <columns>ACCL__Account__c</columns>
        <columns>ACCL__Tour__c</columns>
        <columns>ACCL__Sales_Org__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Cash_Float</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Phase__c</columns>
        <columns>ACCL__Inventory_Template__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ACCL__User__c</columns>
        <columns>ACCL__Tour__c</columns>
        <columns>ACCL__Sales_Org__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ACCL__Inventory__c.ACCL__Cash_Float</value>
        </filters>
        <label>All Cash Float</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Inventory</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Phase__c</columns>
        <columns>ACCL__Inventory_Template__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ACCL__User__c</columns>
        <columns>ACCL__Product__c</columns>
        <columns>ACCL__Account__c</columns>
        <columns>ACCL__Tour__c</columns>
        <columns>ACCL__Sales_Org__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ACCL__Inventory__c.ACCL__Inventory</value>
        </filters>
        <label>All Inventory</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Quota</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Phase__c</columns>
        <columns>ACCL__Inventory_Template__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ACCL__Quota_Type__c</columns>
        <columns>ACCL__User__c</columns>
        <columns>ACCL__Product__c</columns>
        <columns>ACCL__Account__c</columns>
        <columns>ACCL__Tour__c</columns>
        <columns>ACCL__Sales_Org__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ACCL__Inventory__c.ACCL__Quota</value>
        </filters>
        <label>All Quota</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>I-{0000000}</displayFormat>
        <label>Inventory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory</pluralLabel>
    <recordTypes>
        <fullName>ACCL__Cash_Float</fullName>
        <active>true</active>
        <label>Cash Float</label>
    </recordTypes>
    <recordTypes>
        <fullName>ACCL__Inventory</fullName>
        <active>true</active>
        <label>Inventory</label>
    </recordTypes>
    <recordTypes>
        <fullName>ACCL__Quota</fullName>
        <active>true</active>
        <label>Quota</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ACCL__Date_Range_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ACCL__Valid_From__c &gt;  ACCL__Valid_Thru__c</errorConditionFormula>
        <errorDisplayField>ACCL__Valid_From__c</errorDisplayField>
        <errorMessage>Valid From can&apos;t be later than Valid Thru.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Inventory_Template_Deletion_Not_Allowed</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(ACCL__Inventory_Template__c), OR(ISBLANK(ACCL__Inventory_Template__c), 
ISNULL(ACCL__Inventory_Template__c)))</errorConditionFormula>
        <errorDisplayField>ACCL__Inventory_Template__c</errorDisplayField>
        <errorMessage>The Inventory Template can&apos;t be empty.</errorMessage>
    </validationRules>
</CustomObject>